@@ -245,7 +245,7 @@ public class JsonReader implements BaseJsonReader {
 			}
 
 			ws = [ \r\n\t] | (('//' | '/*') @comment);
-			string = '"' @quotedChars %string '"' | ^[{}\[\],:"\r\n\t ] >unquotedChars %string;
+			string = '"' @quotedChars %string '"' | ^[/{}\[\],:"\r\n\t ] >unquotedChars %string;
 			value = '{' @startObject | '[' @startArray | string;
 			nameValue = string >name ws* ':' ws* value;
 			object := ws* nameValue? ws* (',' ws* nameValue ws*)** ','? ws* '}' @endObject;
