@@ -16,6 +16,7 @@
 - API Addition: TextureAttribute now supports uv transform (texture regions).
 - API Change: Added parameters to Elastic Interpolation.
 - API Change: Removed Actor#setCenterPosition, added setPosition(x,y,align).
+- API Change: JsonReader, forward slash added to characters an unquoted strings cannot start with.
 
 [1.3.1]
 - API change: Viewport refactoring. https://github.com/libgdx/libgdx/pull/2220
